rpi5/huginn/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: huginn
  labels:
    app: huginn
    app.kubernetes.io/component: web
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: huginn
      app.kubernetes.io/component: web
  template:
    metadata:
      name: huginn
      labels:
        app: huginn
        app.kubernetes.io/component: web
    spec:
      containers:
        - name: huginn
          image: ghcr.io/huginn/huginn-single-process:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              protocol: TCP
              name: http
      restartPolicy: Always
      nodeSelector:
        kubernetes.io/arch: amd64
