rpi5/huginn/worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: huginn-worker
  labels:
    app: huginn
    app.kubernetes.io/component: worker
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  selector:
    matchLabels:
      app: huginn
      app.kubernetes.io/component: worker
  template:
    metadata:
      name: huginn-worker
      labels:
        app: huginn
        app.kubernetes.io/component: worker
    spec:
      containers:
        - name: huginn-worker
          image: ghcr.io/huginn/huginn-single-process:latest@sha256:e6b7cf825561d2a999ad42306a57e2fa72ba4670ad20af1adc54bf6815a8ac45
          imagePullPolicy: Always
          command:
            - /scripts/init
            - bin/threaded.rb
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
            limits:
              cpu: "1"
              memory: 1Gi
      restartPolicy: Always
      nodeSelector:
        kubernetes.io/arch: amd64
