rpi5/huginn/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: huginn
spec:
  selector:
    app: huginn
    app.kubernetes.io/component: web
  ports:
    - protocol: TCP
      port: 80
      targetPort: http
  type: ClusterIP
