rpi5/huginn/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: huginn
  annotations:
    external-dns.alpha.kubernetes.io/target: 192.168.1.100
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`huginn.local`) || Host(`huginn.internal`)
      middlewares:
        - name: security-headers
          namespace: kube-system
      services:
        - name: huginn
          port: 80
  tls:
    secretName: huginn-cert-tls
    domains:
      - main: huginn.local
        sans:
          - huginn.internal
